--- a/login.html
+++ b/login.html
@@ -3,20 +3,20 @@
 
 <head>
     <!-- 
-        CodeSquad Personal Project Index (Home) Page
+        CodeSquad Personal Project Login Page
         Developer: Edwardo Troncoso-Castro
         Last Updated Date: 2023-03-07
 
-        filename: index.html
+        filename: login.html
      -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NSCRC | Home</title>
+    <title>NSCRC | Login</title>
 
     <!-- Linking CSS Files -->
     <link rel="stylesheet" type="text/css" href="./styles/general-styles.css">
-    <link rel="stylesheet" type="text/css" href="./styles/index-styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/form-styles.css">
 
     <!-- Linking Google Fonts Roboto Font Family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,31 +53,25 @@
     </header>
 
     <div class="main-container">
+        <div class="form-container">
+            <h1 class="title">Welcome</h1>
 
-        <section class="about">
-            <h1 class="title">North Shore Community <span class="title-split">Resources Connector</span></h1>
+            <form action="#" class="form">
+                <div class="form-fields">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email">
+                    <!-- <span class="message">Valid email</span> -->
+                </div>
 
-            <p>The purpose of the North Shore Community Resources Connector (NSCRC) web application is to serve as a central hub of information that can lead to transformative socio-economic change for low-income residents of the North Shore, Massachusetts region.</p>
+                <div class="form-fields">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Password">
+                    <!-- <span class="message">Incorrect password</span> -->
+                </div>
 
-            <p>This site is aimed at anyone looking for resources such as affordable health care, housing, food insecurity, employment and career services, and physical and mental well-being, among other niche categories.</p>
-
-            <p>My hope is that this site can serve as a way to more effectively get information about resources available to those who need it but are often unaware of what is available to them. Together, we can gradually reduce socioeconomic disparities and inequity in this region.</p>
-        </section>
-
-        <section class="fx-bg-img">
-            <h2 class="fx-bg-img-text">"Alone we can do so little; together we can do so much."</h2>
-            <p class="fx-bg-img-text">- Helen Keller</>
-        </section>
-
-        <section class="main">
-            <h2>&#8618 Free to low-cost community resources near you</h2>
-
-            <h2>&#8618 Community-driven, suggest resource and expand our network</h2>
-
-            <section class="resources-link">
-                <a href="./resources.html">See Resources</a>
-            </section>
-        </section>
+                <button type="submit" class="form-button">Login</button>
+            </form>
+        </div>
     </div>
 
     <footer class="footer-container">
