--- a/resources.html
+++ b/resources.html
@@ -3,26 +3,26 @@
 
 <head>
     <!-- 
-        CodeSquad Personal Project Index (Home) Page
+        CodeSquad Personal Project Resources Page
         Developer: Edwardo Troncoso-Castro
         Last Updated Date: 2023-03-07
 
-        filename: index.html
+        filename: resources.html
      -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NSCRC | Home</title>
+    <title>NSCRC | Resources</title>
 
     <!-- Linking CSS Files -->
     <link rel="stylesheet" type="text/css" href="./styles/general-styles.css">
-    <link rel="stylesheet" type="text/css" href="./styles/index-styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/resources-styles.css">
 
     <!-- Linking Google Fonts Roboto Font Family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
+    
     <!-- Linking JS Files -->
     <script src="https://kit.fontawesome.com/eb16034d32.js" crossorigin="anonymous"></script>
     <script defer src="./scripts/scripts.js"></script>
@@ -53,30 +53,29 @@
     </header>
 
     <div class="main-container">
+        <section class="map-instructions">
+            <h1 class="title">Resources</h1>
 
-        <section class="about">
-            <h1 class="title">North Shore Community <span class="title-split">Resources Connector</span></h1>
+            <h3>Using The Map</h3>
 
-            <p>The purpose of the North Shore Community Resources Connector (NSCRC) web application is to serve as a central hub of information that can lead to transformative socio-economic change for low-income residents of the North Shore, Massachusetts region.</p>
+            <ol class="map-instructions-list">
+                <li>The + and - symbols on the bottom left corner of the map can be used to zoom in or out of the map.</li>
+                
+                <li>Press and hold left click on your mouse or touchpad and move in your desired direction.</li>
 
-            <p>This site is aimed at anyone looking for resources such as affordable health care, housing, food insecurity, employment and career services, and physical and mental well-being, among other niche categories.</p>
+                <li>Each blue pin represents a resource in the community. Click the pin to see the resource information.</li>
 
-            <p>My hope is that this site can serve as a way to more effectively get information about resources available to those who need it but are often unaware of what is available to them. Together, we can gradually reduce socioeconomic disparities and inequity in this region.</p>
+                <li>If you would prefer not to scroll, consider pressing the navigation menu button on the top left corner of the map to see each resource listed and filter by category.</li>
+            </ol>
+
+            <p>Note: On smaller displays such as tablet or mobile devices, press the view larger map button on the top right corner of the map.</p>
         </section>
 
-        <section class="fx-bg-img">
-            <h2 class="fx-bg-img-text">"Alone we can do so little; together we can do so much."</h2>
-            <p class="fx-bg-img-text">- Helen Keller</>
-        </section>
-
-        <section class="main">
-            <h2>&#8618 Free to low-cost community resources near you</h2>
-
-            <h2>&#8618 Community-driven, suggest resource and expand our network</h2>
-
-            <section class="resources-link">
-                <a href="./resources.html">See Resources</a>
-            </section>
+        <section class="main-content">
+            <p class="map-description">Below you will find the map of resources in the North Shore, Massachusetts region:</p>
+            <div class="map-iframe-container">
+                <iframe class="map-iframe" src="https://www.google.com/maps/d/embed?mid=16fJNf4CW04cbSgHKl3mm8QtcMRowlr0&ehbc=2E312F"></iframe>
+            </div>
         </section>
     </div>
 
